--- a/form.css
+++ b/form.css
@@ -73,6 +73,25 @@ button {
   font-size: 1.5em;
 }
 
+#login_btn {
+  background-color: #04aa52;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  cursor: pointer;
+  letter-spacing: 0.15em;
+  font-weight: 400;
+  font-size: 1.5em;
+  text-decoration: none;
+}
+
+#login_btn:hover {
+  opacity: 0.8;
+}
+
 button:hover {
   opacity: 0.8;
 }
