--- a/Games/game.css
+++ b/Games/game.css
@@ -88,6 +88,76 @@ body {
   transform: scale(1.2);
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.6);
 }
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap');
+
+html, body {
+  margin: 0;
+  min-height: 100vh;
+  padding: 0;
+}
+
+/* body {
+  background: #8A2387;
+  background: linear-gradient(to right, #F27121, #E94057, #8A2387);
+  position: relative;
+  text-align: center;
+} */
+
+button {
+  background: none;
+  border: 0;
+  box-sizing: border-box;
+  color: transparent;
+  cursor: pointer;
+  font-family: 'Josefin Sans', sans-serif;
+  font-size: 18px;
+  left: 95%;
+  letter-spacing: 1.5px;
+  line-height: 30px;
+  outline: none;
+  overflow: hidden;
+  padding: 10px 0 0;
+  position: absolute;
+  text-transform: uppercase;
+  top: 10%;
+  transform: translate(-50%, -50%);
+  transition: all 0.2s ease-in;
+  width: 100px;
+}
+
+button::before,
+button::after {
+  background-color: white;
+  content: '';
+  display: block;
+  height: 3px;
+  left: 0;
+  position: absolute;
+  transform-origin: center left;
+  transition: all 0.2s ease-in;
+  width: 141.4214px;
+  z-index: -1;
+}
+
+button::before {
+  top: 0;
+  transform: rotate(45deg);
+}
+
+button::after {
+  bottom: 0;
+  transform: rotate(-45deg);
+}
+
+button:hover {
+  color: #8A2387;
+}
+
+button:hover::before,
+button:hover::after {
+  height: 50px;
+  transform: rotate(0deg);
+}
 
 
 
