--- a/Games/RPS/style.css
+++ b/Games/RPS/style.css
@@ -621,3 +621,91 @@ button:focus::after {
     grid-row: 3;
   }
 }
+/*===================Optimizing for mobile devices===================*/
+/*BEGIN General Classes for demo page*/
+body
+{
+  font-size: 22px;
+}
+
+.demo_wrapper
+{
+  display: flex;
+  width: 100%;
+  height: 4em;
+  /* background: rgba(250,250,250, 0.05); */
+  justify-content: space-around;
+  /* align-items: center; */
+  margin-left:660px;
+  margin-top:10px;
+}
+/*END General Classes for demo page*/
+/*BEGIN normal close button Classes*/
+.container
+{
+  position: relative;
+  width: 2em;
+  height: 2em;
+}
+.container:before
+{
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 0;
+  width: 0;
+  border: 1em solid rgba(100,100,100,0.8);
+  border-radius: 6em;
+  transition: all 0.2s ease-in-out;
+}
+.close_icon
+{
+  transition: all 0.075s ease-in-out;
+  position: absolute;
+  width: 2em;
+  height: 2em;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  border: 0.1em solid;
+  border-color: rgba(250,250,250,0.8);
+  border-radius: 6em;
+  /*background: rgba(255,255,255,0.8);*/
+}
+.close_icon:after
+{
+  transition: all 0.075s ease-in-out;
+  font: 1em Helvetica, arial;
+  font-size: 1em;
+  width: 100%;
+  height: 100%;
+  content:"x";
+  color: rgba(250,250,250,0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: translate(0,-5%) scale(1.25,1);
+}
+/*END normal close button Classes*/
+/*BEGIN First Close button Zoom and Shrink animations*/
+
+.container.zoom_shrink:hover .close_icon.zoom_shrink
+{
+  font-size: 1.2em;
+}
+
+.container.zoom_shrink:active:before
+{
+  border-color: rgba(200,100,100,0.8);
+}
+.container.zoom_shrink:active .close_icon.zoom_shrink
+{
+  font-size: 0.75em;
+  border-color: rgba(50,50,50,0.8);
+}
+.container.zoom_shrink:active .close_icon.zoom_shrink:after
+{
+  color: rgba(50,50,50,0.8);
+}
