--- a/Games/game.css
+++ b/Games/game.css
@@ -60,7 +60,7 @@ body {
 
 .card-image3 {
   grid-area: image;
-  background: linear-gradient(#fff0 0%, #fff0 70%, #1d1d1d 100%), url("card1.jpg");
+  background: linear-gradient(#fff0 0%, #fff0 70%, #1d1d1d 100%), url("TOH.png");
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
   background-size: cover;
